--- a/dd.html
+++ b/dd.html
@@ -20,7 +20,7 @@
         .dd {
             width: 100%;
             height: 100vh;
-            background-image: url(src/ddback.jpeg);
+            background-image: url(Src/ddback.jpeg);
             background-size: cover;
             font-family: 'Urbanist', sans-serif;
             margin-bottom: 10px;
@@ -116,7 +116,7 @@
     <div class="dd">
         <h1 class="ddhead">Dabba Delivery</h1>
         <div class="ddcontent">
-            <img src="src/ddpic.jpeg" alt="ddpic">
+            <img src="Src/ddpic.jpeg" alt="ddpic">
             <p class="ddcon">Khaana-e-khazana will satisfy your hunger with home-cooked food that we lug between home
                 and office daily
                 <br />
