--- a/index.html
+++ b/index.html
@@ -35,61 +35,7 @@
         location.href = "dd.html";
     };
 </script>
-<style>
-    html {
-        font-size: 1rem;
-    }
 
-    h1 {
-        font-size: 1.2rem;
-    }
-
-    p {
-        font-size: 1.1rem;
-    }
-
-    @media (min-width: 768px) {
-        html {
-            font-size: 1.1rem;
-        }
-
-        h1 {
-            font-size: 1.3rem;
-        }
-
-        p {
-            font-size: 1.2rem;
-        }
-    }
-
-    @media (min-width: 991px) {
-        html {
-            font-size: 1.2rem;
-        }
-
-        h1 {
-            font-size: 1.5rem;
-        }
-
-        p {
-            font-size: 1.4rem;
-        }
-    }
-
-    @media (min-width: 1200px) {
-        html {
-            font-size: 1.2rem;
-        }
-
-        h1 {
-            font-size: 1.7rem;
-        }
-
-        p {
-            font-size: 1.6rem;
-        }
-    }
-</style>
 
 <body>
 
@@ -129,7 +75,30 @@
                     </ul>
                 </div>
             </nav>
-
+            <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                  <a class="navbar-brand" href="#">Hidden brand</a>
+                  <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                    <li class="nav-item active">
+                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link disabled" href="#">Disabled</a>
+                    </li>
+                  </ul>
+                  <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                  </form>
+                </div>
+              </nav> -->
+              
         </div>
 
         <video playsinline autoplay muted loop poster="TheGuide.jpg" id="myVideo">
@@ -160,7 +129,7 @@
                         </h1>
                         <p
                             style="color: black; font-size: 20px; margin-right: 20px; font-family: 'Ubuntu', sans-serif;">
-                            HOMEMADE DISHES FROM OUR HOME TO YOURS</p>
+                                BRINGING HOMEMADE DISHES TO YOUR DOORSTEP</p>
                         <br>
                         <br>
                         <br>
@@ -254,7 +223,7 @@
                 <img src="Src/page2.png" class="card-img w-100 bg-warning font-size: 20px; margin-right: 20px; "
                     alt="...">
                 <div class="card-img-overlay d-flex flex-row">
-                    <div style="border: 2px solid black ; display: contents; margin-left:100px;">
+                    <div  style="border: 2px solid black ; display: contents; margin-left:100px;">
                         <img src="Src/Page3mom.svg" ; width="50%" height="100%" alt="">
                     </div>
                     <div id="content">
@@ -292,6 +261,7 @@
                 </div>
             </div>
         </section>
+        
     </div>
 
 
